--- a/app/globals.css
+++ b/app/globals.css
@@ -31,3 +31,13 @@ body {
     text-wrap: balance;
   }
 }
+
+.container {
+  display: flex;
+  gap: 0.5rem;
+  flex-direction: column;
+}
+
+button {
+  width: 200px;
+}
